Bug 1615205: Remove overflow style from error message panel. r=pbro
Differential Revision: https://phabricator.services.mozilla.com/D62714

--- a/devtools/client/themes/animation.css
+++ b/devtools/client/themes/animation.css
@@ -741,12 +741,8 @@ select.playback-rate-selector.devtools-button:not(:empty):not(:disabled):not(.ch
 }
 
 /* No Animation Panel */
-.animation-error-message {
-  overflow: auto;
-}
-
 .animation-error-message > p {
-  white-space: pre;
+  white-space: pre-wrap;
 }
 
 .animation-element-picker::before {
